- Find usages / rename / goto declaration works for locals.